<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="search_hint">search suggestion</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="search_item">item containing the searchview within the menu</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_bug_list">Bugs</string>
    <string name="title_bug_detail">Bug Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name" translatable="false">Bugipedia</string>

    <string name="title_bug_list">Bugs</string>
    <string name="title_bug_detail">Bug Detail</string>

    <!-- networking -->
    <string name="action_success">Success</string>
    <string name="error_conversion">Conversion error</string>
    <string name="error_internet">No internet</string>

    <!-- login/register -->
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_check">Check password</string>
    <string name="action_signup">Sign up</string>
    <string name="action_login">Log in</string>
    <string name="solicit_registration">No account? Sign up here.</string>
    <string name="solicit_login">Have an account? Log in here.</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_login">Invalid login.</string>

    <!-- pw validation -->
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_password">Password must:</string>
    <string name="error_short_password">\n Be greater than 8 characters</string>
    <string name="error_case_password">\n Have at least one uppercase</string>
    <string name="error_symbol_password">\n Contain a number and a symbol</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- add sighting -->
    <string name="title_activity_add_sighting">Add Sighting</string>
    <string name="add_location">Add Location</string>
    <string name="AddSightingWarning">Please select a location within Florida</string>
    <string name="BugLocation">Bug Location</string>
    <string name="sightingNotChosen">Please select a location.</string>
    <string name="confirmBugSightingMessage">Is this the correct location that you saw the bug?</string>
    <string name="sightingAdded">Sighting added successfully!</string>
    <string name="uploadErrorMessage">An error occurred during upload. Please Try again.</string>
    <string name="UploadSuccess">Upload Successful!</string>
    <string name="errorOpenImage">Unable to open image.</string>
    <string name="fatalError">fatal error occurred, please try again.</string>
    <string name="title_activity_add_picture_activity">AddPictureActivity</string>

    <string name="search_database">Search DB</string>
    <string name="login">Login</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="title_activity_gallery">Gallery</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="report_photo">Report Photo</string>
    <string name="confirmReportPhoto">Report this image for being wrong/misleading?</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>
    <string name="photoReportSuccess">Photo Reported!</string>
    <string name="title_activity_view_dbentry">ViewDBEntry</string>
    <string name="Description">Description</string>
    <string name="characteristics">Characteristics</string>
    <string name="additional_info">Additional Info</string>
    <string name="known_sightings">Known Sightings / Locations</string>
    <string name="bugInfo_obtain_error">Error obtaining bug information. Please try again later.</string>
    <string name="imageLoadFailed">Couldn\'t load image:</string>
    <string name="add_picture">Add Picture</string>
    <string name="add_sighting">Add Sighting</string>
    <string name="error_getting_bug_info">Error retrieving Bug Info. Please try again later.</string>
    <string name="common_name">Common Name</string>
    <string name="scientific_name">Scientific Name</string>

</resources>
